--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "jest-test-1",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   },
   "repository": {
     "type": "git",
@@ -18,6 +24,11 @@
   },
   "homepage": "https://github.com/Ajay552/Jest-test-1#readme",
   "dependencies": {
-    "jest": "^29.3.1"
+    "jest": "^29.3.1",
+    "node-fetch": "^3.3.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "babel-jest": "^29.3.1"
   }
 }
